fix: pop-up definition overlaps header (#51)
* fix: pop-up definition overlaps header

The pop-up was located above the header when opened (according to the z-index).

The popup has a z-index: 1000, the header now has a z-index: 1050 (previously 101)

--- a/src/styles/overrides.scss
+++ b/src/styles/overrides.scss
@@ -65,7 +65,7 @@
 }
 
 .pc-navigation {
-    z-index:  101;
+    z-index:  1050;
 
     .desktop .dc-root_wide-format & .container-fluid {
         padding: 0;
@@ -105,7 +105,7 @@
 }
 
 .pc-navigation {
-    z-index:  101;
+    z-index:  1050;
 
     .desktop.dc-root_wide-format & .container-fluid {
         padding: 30px;
